# bevy-minimal-render

./: Cargo.toml
assets/: minimal.wgsl  shadertoy.wgsl  shadertoy_dda.wgsl  shadertoy_sphere_occlusion.wgsl
src/: main.rs
src/minimal/: mod.rs  node.rs  pipeline.rs
src/shadertoy/: mod.rs  node.rs  pipeline.rs
